// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InputStepper Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of InputStepper in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-sc-1kqzp6i-1 jisWFq"
          >
            <label
              className="InputField__Field-sc-4opay-0 iedcUZ"
              data-test={undefined}
            >
              <div
                className="InputField__InputContainer-sc-4opay-2 ksKWcl"
              >
                <div
                  className="InputField__Prefix-sc-4opay-4 kZvirV"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-sc-4opay-6 fqqXrq"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={undefined}
                  onChange={[Function]}
                  onFocus={undefined}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  size="normal"
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-sc-4opay-5 jXQtRs"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-sc-4opay-1 ipxhgc"
                />
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of InputStepper in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-sc-1kqzp6i-1 jisWFq"
          >
            <label
              className="InputField__Field-sc-4opay-0 iedcUZ"
              data-test={undefined}
            >
              <span
                className="FormLabel-sc-1927civ-1 bSnaNp"
                data-test={undefined}
              >
                <span>
                  Label
                </span>
              </span>
              <div
                className="InputField__InputContainer-sc-4opay-2 bnDMxw"
              >
                <div
                  className="InputField__Prefix-sc-4opay-4 kZvirV"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-sc-4opay-6 fqqXrq"
                  disabled={false}
                  max={10}
                  maxLength={undefined}
                  min={1}
                  minLength={undefined}
                  name="name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  size="normal"
                  type="number"
                  value={4}
                />
                <div
                  className="InputField__Suffix-sc-4opay-5 jXQtRs"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-sc-4opay-1 czVugR"
                />
              </div>
              <div
                className="FormFeedback__StyledFormFeedback-sc-1lhzkwp-0 kPCzrr"
                data-test={undefined}
              >
                Error message (explain how to solve it)
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          defaultValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                4
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          step
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                2
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          error
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Error message (explain how to solve it)
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#777",
                                  }
                                }
                              >
                                null
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          name
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              name
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          maxValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                10
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          minValue
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                1
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          disabled
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          required
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          dataTest
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              test
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper With different size 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With different size
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Here you can try InputStepper component with additional functionality.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-sc-1kqzp6i-1 jisWFq"
          >
            <label
              className="InputField__Field-sc-4opay-0 iedcUZ"
              data-test={undefined}
            >
              <span
                className="FormLabel-sc-1927civ-1 iTEGJS"
                data-test={undefined}
              >
                <span>
                  Label
                </span>
              </span>
              <div
                className="InputField__InputContainer-sc-4opay-2 ksKWcl"
              >
                <div
                  className="InputField__Prefix-sc-4opay-4 kZvirV"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-sc-4opay-6 fqqXrq"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  size="normal"
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-sc-4opay-5 jXQtRs"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-sc-4opay-1 ipxhgc"
                />
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InputStepper With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Here you can try InputStepper component with additional functionality.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="InputStepper__StyledInputStepper-sc-1kqzp6i-1 jisWFq"
          >
            <label
              className="InputField__Field-sc-4opay-0 iedcUZ"
              data-test={undefined}
            >
              <span
                className="FormLabel-sc-1927civ-1 iTEGJS"
                data-test={undefined}
              >
                <span>
                  Aduls
                </span>
              </span>
              <div
                className="InputField__InputContainer-sc-4opay-2 ksKWcl"
              >
                <div
                  className="InputField__Prefix-sc-4opay-4 kZvirV"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  className="InputField__Input-sc-4opay-6 fqqXrq"
                  disabled={undefined}
                  max={undefined}
                  maxLength={undefined}
                  min={undefined}
                  minLength={undefined}
                  name={undefined}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={undefined}
                  placeholder={undefined}
                  size="normal"
                  type="number"
                  value={0}
                />
                <div
                  className="InputField__Suffix-sc-4opay-5 jXQtRs"
                >
                  <div
                    className="ButtonLink__StyledButtonLink-sc-14jv5cl-2 gBbmwE InputStepper__PrefixSuffix-sc-1kqzp6i-0 gTLEXo"
                    data-test={undefined}
                    disabled={false}
                    onClick={[Function]}
                    size="normal"
                    target={undefined}
                  >
                    <div
                      className="ButtonLink__IconContainer-sc-14jv5cl-0 cbCnGN"
                      size="normal"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 jAabTa"
                        data-test={undefined}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  className="InputField__FakeInput-sc-4opay-1 ipxhgc"
                />
              </div>
              <div
                className="FormFeedback__StyledFormFeedback-sc-1lhzkwp-0 kmOHgC"
                data-test={undefined}
              >
                You need to enter count of adults
              </div>
            </label>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      InputStepper
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Aduls
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              normal
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              You need to enter count of adults
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onChange()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onFocus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onBlur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
